fix: text overflow on edit page

--- a/frontend/src/css/preview.css
+++ b/frontend/src/css/preview.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   margin-top: 0px;
-
 }
 
 .preview-header {
@@ -15,9 +14,14 @@
   margin-top: 0px;
 }
 
+.preview-header,
 .preview-duration,
 .preview-location,
 .preview-description {
   margin: 5px 0;
   color: #555;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: normal;
+  word-wrap: break-word;
 }
